# auto_sim_ai

./: .pylintrc  ADVANCED_FEATURES.md  AI1.qmd  API_GUIDE.md  ARCHITECTURE.md  CHANGELOG_DOCS.md  CONTRIBUTING.md  DESIGN_SYSTEM.md  LLM_PARSER_UPDATE.md  LONGITUDINAL_UPDATE.md  MICROSIM_REMOVAL_SUMMARY.md  MISSING_UI_FEATURES.md  PARALLEL_EXECUTION_GUIDE.md  QUICKSTART.md  QUICK_REFERENCE_SUMMARY.md  README.md  README_backup.md  README_zh.md  SUMMARY_OF_CHANGES.md  UI_FEATURE_COVERAGE.md  UPDATE_NOTES.md  app.py  test_ai_extraction.py  test_all_parsers.py  test_delete_function.py  test_demographic_summary.py  test_gender_parsing.py  test_llm_parser.py  test_parser_fix.py  test_persona_flow.py  test_ui_summary.py
.streamlit/: config.toml
03-website/: Datasets description.md  app.py  i18n.py  requirements.txt
docs/: AI_FEATURE_FLOW.py  AI_PERSONA_GENERATION.md  AI_SURVEY_PARSER_GROUPS.md  API_GUIDE.md  ARCHITECTURE.md  DEMOGRAPHICS_SUMMARY.md  LONGITUDINAL_GUIDE.md  README.md  UPDATE_QUESTION_GROUPS.md  VISUAL_EXAMPLE_GROUPS.py  VISUAL_EXAMPLE_SUMMARY.py
docs/development/: .pre-commit-config.yaml  env.example  pyproject.toml
examples/: longitudinal_study_demo.py
pages/: 1_Setup.py  2_Simulation.py  3_Results.py
src/: __init__.py  ab_testing.py  analysis.py  cache.py  checkpoint.py  connection_manager.py  estimation.py  export.py  intervention_study.py  llm_client.py  logging_config.py  longitudinal_study.py  persona.py  persona_generator.py  project.py  scoring.py  sensitivity.py  simulation.py  storage.py  styles.py  survey_config.py  survey_templates.py  (+4 more)
(+55 files in other folders)
